--- a/bugHarvester_old/static/main.css
+++ b/bugHarvester_old/static/main.css
@@ -1,9 +1,9 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 208px;
+  min-height: 464px;
 }
 
 .u-section-1 .u-table-1 {
-  margin: 0 auto 60px 0;
+  margin: 171px auto 60px 0;
 }
 
 .u-block-a942-46 {
