--- a/bugHarvester_old/static/projectTemplate.css
+++ b/bugHarvester_old/static/projectTemplate.css
@@ -1,12 +1,12 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 208px;
+  min-height: 464px;
 }
 
 .u-section-1 .u-table-1 {
-  margin: 0 auto 60px 0;
+  margin: 42px auto 42px 0;
 }
 
-.u-block-a942-46 {
+.u-block-7714-46 {
   background-image: none;
 }
 
@@ -19,15 +19,11 @@
   background-image: none;
 }
 
-.u-section-1 .u-table-cell-3 {
+.u-section-1 .u-table-cell-5 {
   background-image: none;
 }
 
-.u-section-1 .u-table-cell-4 {
-  background-image: none;
-}
-
-.u-block-a942-35 {
+.u-block-7714-35 {
   background-image: none;
 }
 
