--- a/bugHarvester_old/templates/projectTemplate.html
+++ b/bugHarvester_old/templates/projectTemplate.html
@@ -6,23 +6,21 @@
   <meta charset="utf-8">
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <title>{{ project['Name'] }}</title>
-  <link rel="stylesheet" href="/static/nicepage.css" media="screen">
-  <link rel="stylesheet" href="/static/projectTemplate.css" media="screen">
-  <script class="u-script" type="text/javascript" src="/static/nicepage.js" defer=""></script>
-  <script class="u-script" type="text/javascript" src="/static/nicepage.js" defer=""></script>
+  <title>{{ project_name }}</title>
+  <link rel="stylesheet" href="../static/nicepage.css" media="screen">
+  <link rel="stylesheet" href="../static/projectTemplate.css" media="screen">
+  <script class="u-script" type="text/javascript" src="../static/jquery.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="../static/nicepage.js" defer=""></script>
   <meta name="generator" content="Nicepage 4.11.3, nicepage.com">
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-
-
 
 
   <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Site1",
-		"logo": "/static/images/logo_left.png",
+		"logo": "../static/images/logo_left.png",
 		"sameAs": [
 				"https://github.com/Scwol111"
 		]
@@ -36,9 +34,8 @@
 <body class="u-body u-xxl-mode">
   <header class="u-clearfix u-header u-header" id="sec-9812">
     <div class="u-clearfix u-sheet u-sheet-1">
-      <a href="{{ 'http://' + request.host }}" class="u-image u-logo u-image-1" data-image-width="400"
-        data-image-height="92">
-        <img src="/static/images/logo_left.png" class="u-logo-image u-logo-image-1">
+      <a href="{{ 'http://' + request.host }}" class="u-image u-logo u-image-1" data-image-width="400" data-image-height="92">
+        <img src="../static/images/logo_left.png" class="u-logo-image u-logo-image-1">
       </a>
       <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
         <div class="menu-collapse"
@@ -62,11 +59,11 @@
           <ul class="u-nav u-spacing-2 u-unstyled u-nav-1">
             <li class="u-nav-item"><a
                 class="u-active-palette-1-base u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white"
-                href="{{ 'http://' + request.host + '/' }}" style="padding: 10px 20px;">Главная</a>
+                href="{{ 'http://' + request.host + '/' + 'main.html' }}" style="padding: 10px 20px;">main</a>
             </li>
             <li class="u-nav-item"><a
                 class="u-active-palette-1-base u-button-style u-hover-palette-1-light-1 u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white"
-                href="{{ 'http://' + request.host + '/contacts' }}" style="padding: 10px 20px;">Контакты</a>
+                href="{{ 'http://' + request.host + '/' + 'Contacts.html' }}" style="padding: 10px 20px;">Contacts</a>
             </li>
           </ul>
         </div>
@@ -75,11 +72,9 @@
             <div class="u-inner-container-layout u-sidenav-overflow">
               <div class="u-menu-close"></div>
               <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link"
-                    href="{{ 'http://' + request.host + '/' }}">Главная</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="main.html">main</a>
                 </li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link"
-                    href="{{ 'http://' + request.host + '/' + 'contacts' }}">Контакты</a>
+                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contacts.html">Contacts</a>
                 </li>
               </ul>
             </div>
@@ -90,57 +85,18 @@
       <a class="u-hidden-sm u-hidden-xs u-login u-login-1">{{ login }}</a>
     </div>
   </header>
-  <section class="u-clearfix u-section-1" id="sec-e265">
-    <div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
-      <h3 class="u-align-center u-text u-text-default u-text-1">{{ project['Name'] }}</h3>
-      <h4 class="u-align-left u-text u-text-default u-text-2">Версия проекта:</h4>
-      <h4 class="u-align-left u-text u-text-default u-text-3">{{ project['version'] }}</h4>
-      <h5 class="u-align-left u-text u-text-4">Время последнего анализа:</h5>
-      <h5 class="u-align-left u-text u-text-default u-text-5">{{ project['analysTime'] }}</h5>
-      <p class="u-align-left u-text u-text-6">{{ project['Description'] }}</p>
-    </div>
-  </section>
-  {% if count['errors'] + count['warnings'] > 0 %}
-  <section class="u-align-center u-clearfix u-section-2" id="sec-032a">
-    <div
-      class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-middle-xxl u-sheet-1">
-      <div class="u-expanded-width u-list u-list-1">
-        <div class="u-repeater u-repeater-1">
-          <div
-            class="u-align-center u-container-style u-custom-item u-list-item u-palette-2-light-2 u-repeater-item u-shape-rectangle u-list-item-1">
-            <div class="u-container-layout u-similar-container u-container-layout-1">
-              <h1 class="u-align-center u-text u-title u-text-1" data-animation-name="counter"
-                data-animation-event="scroll" data-animation-duration="3000">{{ count['errors'] }}</h1>
-              <p class="u-text u-text-2">Количество превышений<br>
-              </p>
-            </div>
-          </div>
-          <div
-            class="u-align-center u-container-style u-custom-item u-list-item u-palette-3-light-2 u-repeater-item u-list-item-2">
-            <div class="u-container-layout u-similar-container u-container-layout-2">
-              <h1 class="u-align-center u-text u-title u-text-3" data-animation-name="counter"
-                data-animation-event="scroll" data-animation-duration="3000">{{ count['warnings'] }}</h1>
-              <p class="u-text u-text-4">Количество предупреждений</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  {% endif %}
-  <section class="u-align-center u-clearfix u-section-3" id="sec-5871">
-    <div class="u-clearfix u-sheet u-sheet-1">
+  <section class="u-align-center u-clearfix u-section-1" id="sec-5871">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <div class="u-expanded-width u-table u-table-responsive u-table-1">
         <table class="u-table-entity u-table-entity-1">
           <colgroup>
-            <col width="19.9%">
-            <col width="39.4%">
-            <col width="13.2%">
-            <col width="13.6%">
-            <col width="13.9%">
+            <col width="25%">
+            <col width="25%">
+            <col width="25%">
+            <col width="25%">
           </colgroup>
           <thead class="u-palette-1-base u-table-header u-table-header-1">
-            <tr style="height: 37px;">
+            <tr style="height: 21px;">
               <th class="u-border-1 u-border-palette-1-base u-table-cell">Ошибка</th>
               <th class="u-border-1 u-border-palette-1-base u-table-cell">Описание</th>
               <th class="u-border-1 u-border-palette-1-base u-table-cell">Количество</th>
@@ -151,10 +107,7 @@
           <tbody class="u-table-body">
             {% for er in errors %}
             <tr style="height: 75px;">
-              <td class="u-border-1 u-border-grey-30 u-first-column u-grey-5 u-table-cell u-table-cell-5">
-                <a href="{{ '/projects/' + project['Name'] + '/' + er[0] }}">
-                  {{ er[0] }}
-                </a>
+              <td class="u-border-1 u-border-grey-30 u-first-column u-grey-5 u-table-cell u-table-cell-5">{{ er[0] }}
               </td>
               <td class="u-border-1 u-border-grey-30 u-table-cell">{{ er[1] }}</td>
               <td class="u-border-1 u-border-grey-30 u-table-cell">{{ er[2] }}</td>
@@ -173,15 +126,37 @@
 
   <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-4231">
     <div class="u-clearfix u-sheet u-valign-top-xs u-sheet-1">
-      <a href="{{ 'http://' + request.host }}" class="u-image u-logo u-image-1" data-image-width="400"
-        data-image-height="92">
-        <img src="/static/images/logo_left-removebg-preview1.png" class="u-logo-image u-logo-image-1">
+      <a href="{{ 'http://' + request.host }}" class="u-image u-logo u-image-1" data-image-width="400" data-image-height="92">
+        <img src="../static/images/logo_left-removebg-preview1.png" class="u-logo-image u-logo-image-1">
       </a>
       <p class="u-text u-text-1">Программное обеспечение создано для ВКР КНИТУ-КАИ</p>
-      <div class="u-align-right u-social-icons u-spacing-10 u-social-icons-1" data-animation-name=""
+      <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1" data-animation-name=""
         data-animation-duration="0" data-animation-direction="">
+        <a class="u-social-url" title="facebook" target="_blank" href=""><span
+            class="u-icon u-social-facebook u-social-icon u-icon-1"><svg class="u-svg-link"
+              preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style="">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-6ecb"></use>
+            </svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-6ecb">
+              <circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle>
+              <path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
+            c0-6.7,3.1-17,17-17h12.5v13.9H73.5z"></path>
+            </svg></span>
+        </a>
+        <a class="u-social-url" title="twitter" target="_blank" href=""><span
+            class="u-icon u-social-icon u-social-twitter u-icon-2"><svg class="u-svg-link"
+              preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style="">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-5f66"></use>
+            </svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-5f66">
+              <circle fill="currentColor" class="st0" cx="56.1" cy="56.1" r="55"></circle>
+              <path fill="#FFFFFF" d="M83.8,47.3c0,0.6,0,1.2,0,1.7c0,17.7-13.5,38.2-38.2,38.2C38,87.2,31,85,25,81.2c1,0.1,2.1,0.2,3.2,0.2
+            c6.3,0,12.1-2.1,16.7-5.7c-5.9-0.1-10.8-4-12.5-9.3c0.8,0.2,1.7,0.2,2.5,0.2c1.2,0,2.4-0.2,3.5-0.5c-6.1-1.2-10.8-6.7-10.8-13.1
+            c0-0.1,0-0.1,0-0.2c1.8,1,3.9,1.6,6.1,1.7c-3.6-2.4-6-6.5-6-11.2c0-2.5,0.7-4.8,1.8-6.7c6.6,8.1,16.5,13.5,27.6,14
+            c-0.2-1-0.3-2-0.3-3.1c0-7.4,6-13.4,13.4-13.4c3.9,0,7.3,1.6,9.8,4.2c3.1-0.6,5.9-1.7,8.5-3.3c-1,3.1-3.1,5.8-5.9,7.4
+            c2.7-0.3,5.3-1,7.7-2.1C88.7,43,86.4,45.4,83.8,47.3z"></path>
+            </svg></span>
+        </a>
         <a class="u-social-url" target="_blank" data-type="Github" title="Github"
-          href="https://github.com/Scwol111"><span class="u-icon u-social-github u-social-icon u-icon-1"><svg
+          href="https://github.com/Scwol111"><span class="u-icon u-social-github u-social-icon u-icon-3"><svg
               class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style="">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-faac"></use>
             </svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-faac">
