--- a/server/bugHarvesterWebserver/templates/ContactFormTemplate.html
+++ b/server/bugHarvesterWebserver/templates/ContactFormTemplate.html
@@ -5,14 +5,13 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>projectTemplate</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="projectTemplate.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
+    <title>ContactFormTemplate</title>
+    <link rel="stylesheet" href="/static/nicepage.css" media="screen">
+<link rel="stylesheet" href="/static/ContactFormTemplate.css" media="screen">
+    <script class="u-script" type="text/javascript" src="/static/nicepage.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/static/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 4.11.3, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-    
     
     
     
@@ -20,19 +19,19 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Site1",
-		"logo": "images/logo_left.png",
+		"logo": "/static/images/logo_left.png",
 		"sameAs": [
 				"https://github.com/Scwol111"
 		]
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="projectTemplate">
+    <meta property="og:title" content="ContactFormTemplate">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-xxl-mode"><header class="u-clearfix u-header u-header" id="sec-9812"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="400" data-image-height="92">
-          <img src="images/logo_left.png" class="u-logo-image u-logo-image-1">
+        <a href="{{ 'http://' + request.host }}" class="u-image u-logo u-image-1" data-image-width="400" data-image-height="92">
+          <img src="/static/images/logo_left.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 500;">
@@ -59,77 +58,47 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <a class="u-hidden-sm u-hidden-xs u-login u-login-1">Имя пользователя</a>
+        <a class="u-hidden-sm u-hidden-xs u-login u-login-1">{{ login }}</a>
       </div></header>
-    <section class="u-clearfix u-section-1" id="sec-e265">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h3 class="u-align-center u-text u-text-default u-text-1">{{ projectName }}</h3>
+    <section class="u-clearfix u-section-1" id="sec-8c2b">
+      <div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
+        <h3 class="u-align-center u-text u-text-default u-text-1">{{ project['Name'] }}</h3>
         <h4 class="u-align-left u-text u-text-default u-text-2">Версия проекта:</h4>
-        <h4 class="u-align-left u-text u-text-default u-text-3">{{ version }}</h4>
+        <h4 class="u-align-left u-text u-text-default u-text-3">{{ project['version'] }}</h4>
         <h5 class="u-align-left u-text u-text-4">Время последнего анализа:</h5>
-        <h5 class="u-align-left u-text u-text-default u-text-5">{{ analysTime }}</h5>
-        <p class="u-align-left u-text u-text-6">{{ projectDescription }}</p>
+        <h5 class="u-align-left u-text u-text-default u-text-5">{{ project['analysTime'] }}</h5>
+        <p class="u-align-left u-text u-text-6">{{ project['Description'] }}</p>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-2" id="sec-032a">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-middle-xxl u-sheet-1">
-        <div class="u-expanded-width u-list u-list-1">
-          <div class="u-repeater u-repeater-1">
-            <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-2-light-2 u-repeater-item u-shape-rectangle u-list-item-1">
-              <div class="u-container-layout u-similar-container u-container-layout-1">
-                <h1 class="u-align-center u-text u-title u-text-1" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="3000">{{ errorCount }}</h1>
-                <p class="u-text u-text-2">Количество превышений<br>
-                </p>
-              </div>
-            </div>
-            <div class="u-align-center u-container-style u-custom-item u-list-item u-palette-3-light-2 u-repeater-item u-list-item-2">
-              <div class="u-container-layout u-similar-container u-container-layout-2">
-                <h1 class="u-align-center u-text u-title u-text-3" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="3000">{{ warningCount }}</h1>
-                <p class="u-text u-text-4">Количество предупреждений</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="u-align-center u-clearfix u-section-3" id="sec-5871">
+    <section class="u-align-center u-clearfix u-section-2" id="sec-af7b">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-expanded-width u-table u-table-responsive u-table-1">
-          <table class="u-table-entity u-table-entity-1">
-            <colgroup>
-              <col width="19.9%">
-              <col width="39.4%">
-              <col width="13.2%">
-              <col width="13.6%">
-              <col width="13.9%">
-            </colgroup>
-            <thead class="u-palette-1-base u-table-header u-table-header-1">
-              <tr style="height: 37px;">
-                <th class="u-border-1 u-border-palette-1-base u-table-cell">Ошибка</th>
-                <th class="u-border-1 u-border-palette-1-base u-table-cell">Описание</th>
-                <th class="u-border-1 u-border-palette-1-base u-table-cell">Количество</th>
-                <th class="u-border-1 u-border-palette-1-base u-table-cell">Вес</th>
-                <th class="u-border-1 u-border-palette-1-base u-table-cell">Статус</th>
-              </tr>
-            </thead>
-            <tbody class="u-table-body">
-              <tr style="height: 75px;">
-                <td class="u-border-1 u-border-grey-30 u-first-column u-grey-5 u-table-cell u-table-cell-6">Row 1</td>
-                <td class="u-border-1 u-border-grey-30 u-table-cell">Description</td>
-                <td class="u-border-1 u-border-grey-30 u-table-cell">Description</td>
-                <td class="u-border-1 u-border-grey-30 u-table-cell">Description</td>
-                <td class="u-border-1 u-border-grey-30 u-table-cell">Description</td>
-              </tr>
-            </tbody>
-          </table>
+        <h2 class="u-text u-text-default u-text-1">Отправить отчет разработчику</h2>
+        <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-form u-form-1">
+          <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
+            <div class="u-form-email u-form-group u-label-none">
+              <label for="email-3b9a" class="u-label">Email</label>
+              <input type="email" placeholder="Введите электронную почту" id="email-3b9a" name="email" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
+            </div>
+            <div class="u-form-group u-form-message u-label-none">
+              <label for="message-3b9a" class="u-label">Message</label>
+              <textarea placeholder="Введите ваше сообщение" rows="4" cols="50" id="message-3b9a" name="message" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required=""></textarea>
+            </div>
+            <div class="u-align-right u-form-group u-form-submit">
+              <a href="#" class="u-btn u-btn-submit u-button-style">Отправить</a>
+              <input type="submit" value="submit" class="u-form-control-hidden">
+            </div>
+            <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+            <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
+            <input type="hidden" value="" name="recaptchaResponse">
+          </form>
         </div>
       </div>
     </section>
     
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-4231"><div class="u-clearfix u-sheet u-valign-top-xs u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="400" data-image-height="92">
-          <img src="images/logo_left-removebg-preview1.png" class="u-logo-image u-logo-image-1">
+        <a href="{{ 'http://' + request.host }}" class="u-image u-logo u-image-1" data-image-width="400" data-image-height="92">
+          <img src="/static/images/logo_left-removebg-preview1.png" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-text u-text-1">Программное обеспечение создано для ВКР КНИТУ-КАИ</p>
         <div class="u-align-right u-social-icons u-spacing-10 u-social-icons-1" data-animation-name="" data-animation-duration="0" data-animation-direction="">
