--- a/server/bugHarvesterWebserver/templates/ProjectCommonPredictTemplate.html
+++ b/server/bugHarvesterWebserver/templates/ProjectCommonPredictTemplate.html
@@ -3,34 +3,35 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Protected Page">
+    <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>Page Password Template</title>
-    <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="Page-Password-Template.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
+    <title>ProjectCommonPredictTemplate</title>
+    <link rel="stylesheet" href="/static/nicepage.css" media="screen">
+<link rel="stylesheet" href="/static/ProjectCommonPredictTemplate.css" media="screen">
+    <script class="u-script" type="text/javascript" src="/static/nicepage.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/static/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 4.11.3, nicepage.com">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    
     
     
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Site1",
-		"logo": "images/logo_left.png",
+		"logo": "/static/images/logo_left.png",
 		"sameAs": [
 				"https://github.com/Scwol111"
 		]
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Page Password Template">
+    <meta property="og:title" content="ProjectCommonPredictTemplate">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
-  <style id="password-redirect-style">body * { display: none; }</style></head>
-  <body data-home-page="login.html" data-salt="b8b3" data-salted-password="2b314e6debd411063e702f2a3689bd4da8a17eb68ad1419bd63c6fee4abde15e" class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-9812"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="400" data-image-height="92">
-          <img src="images/logo_left.png" class="u-logo-image u-logo-image-1">
+  </head>
+  <body class="u-body u-xxl-mode"><header class="u-clearfix u-header u-header" id="sec-9812"><div class="u-clearfix u-sheet u-sheet-1">
+        <a href="{{ 'http://' + request.host }}" class="u-image u-logo u-image-1" data-image-width="400" data-image-height="92">
+          <img src="/static/images/logo_left.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 500;">
@@ -57,38 +58,53 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <a class="u-hidden-sm u-hidden-xs u-login u-login-1">Имя пользователя</a>
+        <a class="u-hidden-sm u-hidden-xs u-login u-login-1">{{ login }}</a>
       </div></header>
-    <section class="u-align-center u-clearfix u-section-1" id="sec-b52e">
-      <div class="u-align-left u-clearfix u-sheet u-valign-middle u-sheet-1"><span class="u-icon u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 96.668 96.668" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-b691"></use></svg><svg class="u-svg-content" viewBox="0 0 96.668 96.668" x="0px" y="0px" id="svg-b691" style="enable-background:new 0 0 96.668 96.668;"><g><path d="M80.372,40.605h-5.7V26.338C74.672,11.815,62.856,0,48.334,0C33.811,0,21.996,11.815,21.996,26.338v14.267h-5.7
-		c-1.104,0-2,0.896-2,2v52.063c0,1.104,0.896,2,2,2h64.076c1.104,0,2-0.896,2-2V42.605C82.372,41.5,81.478,40.605,80.372,40.605z
-		 M43.958,74.2c-1.302-1.218-2.02-2.871-2.02-4.656c0-3.526,2.869-6.396,6.396-6.396c3.526,0,6.396,2.869,6.396,6.396
-		c0,1.785-0.717,3.438-2.02,4.656c-0.404,0.378-0.634,0.907-0.634,1.461v6.782c0,2.063-1.679,3.742-3.743,3.742
-		c-2.064,0-3.743-1.679-3.743-3.742v-6.782C44.591,75.107,44.362,74.578,43.958,74.2z M48.334,14.197
-		c6.694,0,12.14,5.446,12.14,12.141v14.267h-24.28V26.338C36.194,19.644,41.64,14.197,48.334,14.197z"></path>
-</g></svg></span>
-        <h2 class="u-text u-text-default u-text-1">Protected Page</h2>
-        <div class="u-form u-password-control u-form-1">
-          <form action="#" method="POST" class="u-clearfix u-form-custom-backend u-form-spacing-10 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 10px;">
-            <div class="u-align-center u-form-group u-form-password">
-              <label for="password-4c82" class="u-form-control-hidden u-label"></label>
-              <input type="password" placeholder="Enter your Password" id="password-4c82" name="password" class="u-border-2 u-border-grey-30 u-input u-input-rectangle u-input-1" autofocus="autofocus" required="">
+    <section class="u-clearfix u-section-1" id="sec-adaa">
+      <div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
+        <h3 class="u-align-center u-text u-text-default u-text-1">{{ project['Name'] }}</h3>
+        <h4 class="u-align-left u-text u-text-default u-text-2">Версия проекта:</h4>
+        <h4 class="u-align-left u-text u-text-default u-text-3">{{ project['version'] }}</h4>
+        <h5 class="u-align-left u-text u-text-4">Время последнего анализа:</h5>
+        <h5 class="u-align-left u-text u-text-default u-text-5">{{ project['analysTime'] }}</h5>
+        <p class="u-align-left u-text u-text-6">{{ project['Description'] }}</p>
+      </div>
+    </section>
+    <section class="u-clearfix u-section-2" id="sec-784d">
+      <div class="u-clearfix u-sheet u-valign-middle-xxl u-sheet-1">
+        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+          <div class="u-gutter-0 u-layout">
+            <div class="u-layout-col">
+              <div class="u-align-center u-container-style u-layout-cell u-size-20 u-layout-cell-1">
+                <div class="u-container-layout u-container-layout-1">
+                  <h4 class="u-text u-text-default u-text-1">Пример заголовка</h4>
+                  <p class="u-text u-text-default u-text-2">Пример текста. Кликните, чтобы выбрать элемент "Текст".</p>
+                </div>
+              </div>
+              <div class="u-align-center u-container-style u-layout-cell u-size-20 u-layout-cell-2">
+                <div class="u-container-layout u-valign-top u-container-layout-2">
+                  <h4 class="u-text u-text-default u-text-3">Пример заголовка</h4>
+                  <p class="u-text u-text-default u-text-4">Пример текста. Кликните, чтобы выбрать элемент "Текст".</p>
+                </div>
+              </div>
+              <div class="u-align-center u-container-style u-layout-cell u-size-20 u-layout-cell-3">
+                <div class="u-container-layout u-valign-top u-container-layout-3">
+                  <h4 class="u-text u-text-default u-text-5">Пример заголовка</h4>
+                  <p class="u-text u-text-default u-text-6">Пример текста. Кликните, чтобы выбрать элемент "Текст".</p>
+                </div>
+              </div>
             </div>
-            <div class="u-align-left u-form-group u-form-submit">
-              <a href="#" class="u-active-palette-1-light-1 u-border-2 u-border-active-palette-1-light-1 u-border-hover-palette-1-light-1 u-border-palette-1-base u-btn u-btn-submit u-button-style u-hover-palette-1-light-1 u-palette-1-base u-btn-1">Submit</a>
-              <input type="submit" value="submit" class="u-form-control-hidden">
-              <div class="u-form-send-error u-form-send-message">Password is incorrect</div>
-            </div>
-            <input type="hidden" value="" name="recaptchaResponse">
-          </form>
+          </div>
         </div>
+        <a href="https://nicepage.com/one-page-template" class="u-border-none u-btn u-btn-round u-button-style u-hidden-xs u-hover-palette-2-base u-radius-1 u-btn-1"><span class="u-icon"><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;"><path d="M382.56,233.376C379.968,227.648,374.272,224,368,224h-64V16c0-8.832-7.168-16-16-16h-64c-8.832,0-16,7.168-16,16v208h-64    c-6.272,0-11.968,3.68-14.56,9.376c-2.624,5.728-1.6,12.416,2.528,17.152l112,128c3.04,3.488,7.424,5.472,12.032,5.472    c4.608,0,8.992-2.016,12.032-5.472l112-128C384.192,245.824,385.152,239.104,382.56,233.376z"></path><path d="M432,352v96H80v-96H16v128c0,17.696,14.336,32,32,32h416c17.696,0,32-14.304,32-32V352H432z"></path></svg><img></span>&nbsp;Скачать отчет
+        </a>
       </div>
     </section>
     
     
     <footer class="u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-footer u-grey-80" id="sec-4231"><div class="u-clearfix u-sheet u-valign-top-xs u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="400" data-image-height="92">
-          <img src="images/logo_left-removebg-preview1.png" class="u-logo-image u-logo-image-1">
+        <a href="{{ 'http://' + request.host }}" class="u-image u-logo u-image-1" data-image-width="400" data-image-height="92">
+          <img src="/static/images/logo_left-removebg-preview1.png" class="u-logo-image u-logo-image-1">
         </a>
         <p class="u-text u-text-1">Программное обеспечение создано для ВКР КНИТУ-КАИ</p>
         <div class="u-align-right u-social-icons u-spacing-10 u-social-icons-1" data-animation-name="" data-animation-duration="0" data-animation-direction="">
