--- a/server/bugHarvesterWebserver/templates/projectErrorTemplate.html
+++ b/server/bugHarvesterWebserver/templates/projectErrorTemplate.html
@@ -6,9 +6,9 @@
   <meta charset="utf-8">
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <title>{{ project['Name'] }}</title>
+  <title>projectErrorTemplate</title>
   <link rel="stylesheet" href="/static/nicepage.css" media="screen">
-  <link rel="stylesheet" href="/static/projectTemplate.css" media="screen">
+  <link rel="stylesheet" href="/static/projectErrorTemplate.css" media="screen">
   <script class="u-script" type="text/javascript" src="/static/nicepage.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="/static/nicepage.js" defer=""></script>
   <meta name="generator" content="Nicepage 4.11.3, nicepage.com">
@@ -28,7 +28,7 @@
 		]
 }</script>
   <meta name="theme-color" content="#478ac9">
-  <meta property="og:title" content="projectTemplate">
+  <meta property="og:title" content="projectErrorTemplate">
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
 </head>
@@ -90,7 +90,7 @@
       <a class="u-hidden-sm u-hidden-xs u-login u-login-1">{{ login }}</a>
     </div>
   </header>
-  <section class="u-clearfix u-section-1" id="sec-e265">
+  <section class="u-clearfix u-section-1" id="sec-bb57">
     <div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
       <h3 class="u-align-center u-text u-text-default u-text-1">{{ project['Name'] }}</h3>
       <h4 class="u-align-left u-text u-text-default u-text-2">Версия проекта:</h4>
@@ -100,67 +100,61 @@
       <p class="u-align-left u-text u-text-6">{{ project['Description'] }}</p>
     </div>
   </section>
-  {% if count['errors'] + count['warnings'] > 0 %}
-  <section class="u-align-center u-clearfix u-section-2" id="sec-032a">
-    <div
-      class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-middle-xxl u-sheet-1">
+  <section class="u-clearfix u-section-2" id="sec-dfe0">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <h3 class="u-align-center u-text u-text-default u-text-1">Рекомендации по исправлению ошибки {{ errorType }}</h3>
       <div class="u-expanded-width u-list u-list-1">
         <div class="u-repeater u-repeater-1">
-          <div
-            class="u-align-center u-container-style u-custom-item u-list-item u-palette-2-light-2 u-repeater-item u-shape-rectangle u-list-item-1">
+          <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-1">
-              <h1 class="u-align-center u-text u-title u-text-1" data-animation-name="counter"
-                data-animation-event="scroll" data-animation-duration="3000">{{ count['errors'] }}</h1>
-              <p class="u-text u-text-2">Количество превышений<br>
-              </p>
+              <h4 class="u-text u-text-default u-text-3">Наиболее распространенная причина возникновения:</h4>
+              <p class="u-text u-text-default u-text-2">Пример текста. Кликните, чтобы выбрать элемент "Текст".</p>
             </div>
           </div>
-          <div
-            class="u-align-center u-container-style u-custom-item u-list-item u-palette-3-light-2 u-repeater-item u-list-item-2">
+          <div class="u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-container-layout-2">
-              <h1 class="u-align-center u-text u-title u-text-3" data-animation-name="counter"
-                data-animation-event="scroll" data-animation-duration="3000">{{ count['warnings'] }}</h1>
-              <p class="u-text u-text-4">Количество предупреждений</p>
+              <h4 class="u-text u-text-default u-text-3">Стандартная методика исправления:</h4>
+              <p class="u-text u-text-default u-text-3">Пример текста. Кликните, чтобы выбрать элемент "Текст".</p>
+            </div>
+          </div>
+          <div class="u-container-style u-list-item u-repeater-item">
+            <div class="u-container-layout u-similar-container u-container-layout-3">
+              <h4 class="u-text u-text-default u-text-3">В проекте чаще всего возникала:</h4>
+              <p class="u-text u-text-default u-text-4">{{ mostCommonTraceback }}</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-  {% endif %}
-  <section class="u-align-center u-clearfix u-section-3" id="sec-5871">
+  <section class="u-align-center u-clearfix u-section-3" id="sec-2b30">
     <div class="u-clearfix u-sheet u-sheet-1">
       <div class="u-expanded-width u-table u-table-responsive u-table-1">
         <table class="u-table-entity u-table-entity-1">
           <colgroup>
-            <col width="19.9%">
-            <col width="39.4%">
-            <col width="13.2%">
-            <col width="13.6%">
-            <col width="13.9%">
+            <col width="25%">
+            <col width="16.8%">
+            <col width="33.2%">
+            <col width="25%">
           </colgroup>
           <thead class="u-palette-1-base u-table-header u-table-header-1">
-            <tr style="height: 37px;">
-              <th class="u-border-1 u-border-palette-1-base u-table-cell">Ошибка</th>
-              <th class="u-border-1 u-border-palette-1-base u-table-cell">Описание</th>
-              <th class="u-border-1 u-border-palette-1-base u-table-cell">Количество</th>
-              <th class="u-border-1 u-border-palette-1-base u-table-cell">Вес</th>
-              <th class="u-border-1 u-border-palette-1-base u-table-cell">Статус</th>
+            <tr style="height: 35px;">
+              <th class="u-border-1 u-border-palette-1-base u-table-cell">Отчет</th>
+              <th class="u-border-1 u-border-palette-1-base u-table-cell">Дата</th>
+              <th class="u-border-1 u-border-palette-1-base u-table-cell"> Трассировка стека</th>
+              <th class="u-border-1 u-border-palette-1-base u-table-cell">Дамп памяти</th>
             </tr>
           </thead>
           <tbody class="u-table-body">
-            {% for er in errors %}
+            {% for err in errorList %}
             <tr style="height: 75px;">
-              <td class="u-border-1 u-border-grey-30 u-first-column u-grey-5 u-table-cell u-table-cell-5">
-                <a href="{{ '/projects/' + project['Name'] + '/' + er[0] }}">
-                  {{ er[0] }}
-                </a>
-              </td>
-              <td class="u-border-1 u-border-grey-30 u-table-cell">{{ er[1] }}</td>
-              <td class="u-border-1 u-border-grey-30 u-table-cell">{{ er[2] }}</td>
-              <td class="u-border-1 u-border-grey-30 u-table-cell">{{ er[3] }}</td>
-              <td class="u-border-1 u-border-grey-30 u-table-cell">
-                <img src="{{ er[4] }}">
+              <td class="u-border-1 u-border-grey-30 u-first-column u-grey-5 u-table-cell u-table-cell-5">{{ err['id']
+                }}</td>
+              <td class="u-border-1 u-border-grey-30 u-table-cell">{{ err['date'] }}</td>
+              <td class="u-border-1 u-border-grey-30 u-table-cell">{{ err['traceback'] }}</td>
+              <td class="u-border-1 u-border-grey-30 u-table-cell" align="right">
+                <a href="{{ request.base_url + '/' + err['id'] + '/dump' }}"
+                  class="u-border-2 u-border-palette-1-base u-btn u-button-style u-hover-palette-1-base u-none u-text-hover-white u-btn-1">загрузить</a>
               </td>
             </tr>
             {% endfor %}
