--- a/server/bugHarvesterWebserver/templates/projectTemplate.html
+++ b/server/bugHarvesterWebserver/templates/projectTemplate.html
@@ -138,12 +138,12 @@
                 <!-- <p class="u-text u-text-default u-text-4">Пример текста. Кликните, чтобы выбрать элемент "Текст".</p> -->
               </div>
             </div>
-            <div class="u-align-center u-container-style u-layout-cell u-size-20 u-layout-cell-3">
+            <!-- <div class="u-align-center u-container-style u-layout-cell u-size-20 u-layout-cell-3">
               <div class="u-container-layout u-valign-top u-container-layout-3">
                 <h4 class="u-text u-text-default u-text-5">Трассировка стека частых ошибок</h4>
                 <p class="u-text u-text-default u-text-6">Пример текста. Кликните, чтобы выбрать элемент "Текст".</p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -159,7 +159,7 @@
             <div class="u-container-layout u-similar-container u-container-layout-1">
               <h1 class="u-align-center u-text u-title u-text-1" data-animation-name="counter"
                 data-animation-event="scroll" data-animation-duration="2000">{{ count['errors'] }}</h1>
-              <p class="u-text u-text-2">Количество превышений<br>
+              <p class="u-text u-text-2">Количество срочных ошибок<br>
               </p>
             </div>
           </div>
@@ -168,7 +168,7 @@
             <div class="u-container-layout u-similar-container u-container-layout-2">
               <h1 class="u-align-center u-text u-title u-text-3" data-animation-name="counter"
                 data-animation-event="scroll" data-animation-duration="2000">{{ count['warnings'] }}</h1>
-              <p class="u-text u-text-4">Количество предупреждений</p>
+              <p class="u-text u-text-4">Количество требующих внимания ошибок</p>
             </div>
           </div>
         </div>
